--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: ruby
 rvm:
   - 2.1
   - 2.2
-  
+  - 2.3.0
+gemfile:
+  - gemfiles/Gemfile.activemodel-4.1
+  - gemfiles/Gemfile.activemodel-4.2
