--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: ruby
 rvm:
   - 2.2
   - 2.3.1
+  - 2.4
 gemfile:
   - gemfiles/Gemfile.activemodel-4.2
+  - gemfiles/Gemfile.activemodel-5.0
+  - gemfiles/Gemfile.activemodel-5.1
